.provarCaches/00D5f000005vwGkEAI/objects/rstk__confsess__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_confsess</customHelpPage>
    <description>confsess__c</description>
    <fields>
        <fullName>rstk__confsess_account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Salesforce Account that corresponds with the Configuration Session Customer.  This is only set when the Configuration Session is launched from a Salesforce Opportunity.</inlineHelpText>
        <label>Salesforce Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_comment__c</fullName>
        <inlineHelpText>Optional free-form comments up to 100 alpha-numeric characters.</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_confsess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field holds a link back to a prior Configuration Session which can be used as the source in making default selections in the current session.</inlineHelpText>
        <label>Previous Configuration Session</label>
        <referenceTo>rstk__confsess__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_cost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cost</label>
        <summarizedField>rstk__confdsel__c.rstk__confdsel_cost__c</summarizedField>
        <summaryForeignKey>rstk__confdsel__c.rstk__confdsel_confsess__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_currexchrate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Configuration Currency Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_currexchratedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Exchange Rate Initialized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_custcurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Show Customer Currency Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_custpo__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_dateout__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Session Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_desc__c</fullName>
        <inlineHelpText>User-defined Session Description, up to 50 characters in length</inlineHelpText>
        <label>Session Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_discmethod__c</fullName>
        <inlineHelpText>When a SO Line Discount is to be applied from this Config Session, set the application method to be used.  Options are

-Add Discount to Each Line

-Create Order Line for Discount 
(uses &apos;Configuration Discount Line Product&apos; from the Config Product)</inlineHelpText>
        <label>Discount Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add Discount to Each Line</fullName>
                    <default>true</default>
                    <label>Add Discount to Each Line</label>
                </value>
                <value>
                    <fullName>Create Order Line for Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__confsess_discpct__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>When a &apos;Discount Application Method&apos; is being used, this is the discount percent that will be applied</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Sales Division under which this Configuration Session is being done.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_duedate__c</fullName>
        <inlineHelpText>The date used to set the Due Date on the RS Quote or SO Line when the Configuration Session is exported to a RS Quote or Sales Order.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_expicitemsrl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, rather than exporting to a SO Line, session is exported to Inventory By Serial Number Features record (a &quot;detail&quot; record of the Inventory By Serial Number record)</inlineHelpText>
        <label>Export Features to Serialized Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_exportcust__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Session Export Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Configuration Sessions (Session Export Customer)</relationshipLabel>
        <relationshipName>confsesss_exportcust</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Manufactured Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_icitemsrl__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inventory By Serial Number</label>
        <referenceTo>rstk__icitemsrl__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_instaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ticket 7405</description>
        <inlineHelpText>The Installation Address that will be used on the Sales Order resulting from this Configuration Session.  Defaults to the Installation Customer&apos;s Default Installation Address, but can be overridden.</inlineHelpText>
        <label>Installation Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>install_confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_installcust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ticket 7405</description>
        <inlineHelpText>The Installation Customer that will be used on the Sales Order resulting from this Configuration Session.  Defaults to the session Customer, but can be overridden with any valid &quot;Related Customer&quot; associated with the session Customer.</inlineHelpText>
        <label>Installation Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Configuration Sessions (Installation Customer)</relationshipLabel>
        <relationshipName>install_confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_invdiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Inventory Division from which this Product is to ship</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Configuration Sessions (Inventory Division)</relationshipLabel>
        <relationshipName>invdivconfsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_invsite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Inventory Site within the Inventory Division specified from which this Product is to ship</inlineHelpText>
        <label>Inventory Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>invsiteconfsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_isocountry__c</fullName>
        <description>confsess_isocountry__c</description>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__confsess_lastpriceddate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date of Last Price Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When the Configuration Session is launched from a Salesforce Opportunity, this reflects the value of said Opportunity.</inlineHelpText>
        <label>Salesforce Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_output__c</fullName>
        <label>Session Export Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Order Line</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Manufactured Item</fullName>
                </value>
                <value>
                    <fullName>Job Set</fullName>
                </value>
                <value>
                    <fullName>Item-Serial Features</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__confsess_price1__c</fullName>
        <inlineHelpText>This reflects the result of rolling up &quot;Alternate Price&quot; 1 prices for components selected in this Configuration Session. Note: The field label may differ from the standard &quot;Alternate Price&quot; label if overridden on SO Control record for the given Division.</inlineHelpText>
        <label>Alternate Price 1</label>
        <summarizedField>rstk__confdsel__c.rstk__confdsel_price1__c</summarizedField>
        <summaryForeignKey>rstk__confdsel__c.rstk__confdsel_confsess__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_price1cc__c</fullName>
        <formula>IF( rstk__confsess_custcurrency__c , rstk__confsess_price1__c ,  IF( ISNULL(rstk__confsess_currexchrate__c) || rstk__confsess_currexchrate__c = 0 , rstk__confsess_price1__c , rstk__confsess_price1__c * rstk__confsess_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_price1hc__c</fullName>
        <formula>IF( rstk__confsess_custcurrency__c  ,  IF( ISNULL(rstk__confsess_currexchrate__c) || rstk__confsess_currexchrate__c = 0 , rstk__confsess_price1__c , rstk__confsess_price1__c/ rstk__confsess_currexchrate__c), rstk__confsess_price1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_price2__c</fullName>
        <inlineHelpText>This reflects the result of rolling up &quot;Alternate Price&quot; 2 prices for components selected in this Configuration Session. Note: The field label may differ from the standard &quot;Alternate Price&quot; label if overridden on SO Control record for the given Division.</inlineHelpText>
        <label>Alternate Price 2</label>
        <summarizedField>rstk__confdsel__c.rstk__confdsel_price2__c</summarizedField>
        <summaryForeignKey>rstk__confdsel__c.rstk__confdsel_confsess__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_price2cc__c</fullName>
        <formula>IF( rstk__confsess_custcurrency__c , rstk__confsess_price2__c ,  IF( ISNULL(rstk__confsess_currexchrate__c) || rstk__confsess_currexchrate__c = 0 , rstk__confsess_price2__c , rstk__confsess_price2__c * rstk__confsess_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_price2hc__c</fullName>
        <formula>IF( rstk__confsess_custcurrency__c  ,  IF( ISNULL(rstk__confsess_currexchrate__c) || rstk__confsess_currexchrate__c = 0 , rstk__confsess_price2__c, rstk__confsess_price2__c/ rstk__confsess_currexchrate__c), rstk__confsess_price2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_price__c</fullName>
        <inlineHelpText>The &quot;standard&quot; price of this Configuration session, either derived from the roll-up of Component prices, or as set on the Rootstock Product Master (depending on your pricing methodology).</inlineHelpText>
        <label>Price</label>
        <summarizedField>rstk__confdsel__c.rstk__confdsel_price__c</summarizedField>
        <summaryForeignKey>rstk__confdsel__c.rstk__confdsel_confsess__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_pricecc__c</fullName>
        <formula>IF( rstk__confsess_custcurrency__c , rstk__confsess_price__c ,  IF( ISNULL(rstk__confsess_currexchrate__c) || rstk__confsess_currexchrate__c = 0 , rstk__confsess_price__c , rstk__confsess_price__c * rstk__confsess_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_pricehc__c</fullName>
        <formula>IF( rstk__confsess_custcurrency__c  ,  IF( ISNULL(rstk__confsess_currexchrate__c) || rstk__confsess_currexchrate__c = 0 , rstk__confsess_price__c , rstk__confsess_price__c / rstk__confsess_currexchrate__c), rstk__confsess_price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_sessionid__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Session ID is written to the RS Quote Line or SO Line once the session is exported to an RS Quote or Sales Order, when not using &apos;Auto Set Sales Order Number&apos; on &apos;SO Control&apos; record for the given Division.</inlineHelpText>
        <label>Session ID</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_socust__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Customer for which this Configuration Session is being processed for.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The RS Quote or SO from which this Configuration Session was initiated</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_sopbk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When a Price Book is selected, all pricing will come from the given Price Book chosen only (and will not use any other pricing/discounting mechanisms)</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>rstk__sopbk__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_soprod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The &quot;configurable&quot; product to be configured in this session.</inlineHelpText>
        <label>Configuration Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_staddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ticket 7405</description>
        <inlineHelpText>The Ship To Address that will be used on the Sales Order resulting from this Configuration Session.  Defaults to the session Customer&apos;s Default Ship To Address, but can be overridden.</inlineHelpText>
        <label>Ship To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Configuration Sessions (Ship To Address)</relationshipLabel>
        <relationshipName>shipto_confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_staddress1__c</fullName>
        <inlineHelpText>The Ship-To Address that the shipment is planned for.  This is typically the Street Address.</inlineHelpText>
        <label>Ship-To Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_staddress2__c</fullName>
        <inlineHelpText>The Ship-To Address &quot;extension&quot; (if you will) that the shipment is planned for.  This is typically the Suite or Unit number.</inlineHelpText>
        <label>Ship-To Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_staddress3__c</fullName>
        <inlineHelpText>The Ship-To Address &quot;additional extension&quot; (if you will) that the shipment is planned for.</inlineHelpText>
        <label>Ship-To Address 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_status__c</fullName>
        <inlineHelpText>User-defined picklist values.  There is no Rootstock logic associated with this field.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__confsess_stcity__c</fullName>
        <inlineHelpText>The Ship-To City that the shipment is planned for.</inlineHelpText>
        <label>Ship-To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_stcontact__c</fullName>
        <inlineHelpText>The Ship-To Contact associated with the Ship-To address defined.</inlineHelpText>
        <label>Ship-To Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_stcountry__c</fullName>
        <inlineHelpText>The Ship-To Country that the shipment is planned for.</inlineHelpText>
        <label>Ship-To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_stname__c</fullName>
        <inlineHelpText>The Ship-To Name for the Ship-To address.</inlineHelpText>
        <label>Ship-To Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_ststate__c</fullName>
        <inlineHelpText>The Ship-To State or Province that the shipment is planned for.</inlineHelpText>
        <label>Ship-To State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_stzip__c</fullName>
        <inlineHelpText>The Ship-To Postal Code for the Ship-To address defined.</inlineHelpText>
        <label>Ship-To Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_taxloc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Tax Location defined for the Ship-To address defined.</inlineHelpText>
        <label>Tax Location</label>
        <referenceTo>rstk__sotax__c</referenceTo>
        <relationshipLabel>Configuration Sessions</relationshipLabel>
        <relationshipName>confsesss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_totdepcompprice__c</fullName>
        <inlineHelpText>Sum of Prices from Session Components that are not set to &apos;Output to Individual Line&apos; (only applicable to Components Type &apos;Product&apos;) and are not the result of Adjusting Selections.</inlineHelpText>
        <label>Total Price of Dependent Components</label>
        <summarizedField>rstk__confdsel__c.rstk__confdsel_totdepcompprice__c</summarizedField>
        <summaryForeignKey>rstk__confdsel__c.rstk__confdsel_confsess__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__confsess_useconfig__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, when the Configurable Product is of a Product Type = Stock, the Product will be treated as if the Product Type = Configured.  Note: &apos;Configurable Product&apos; must be checked on the Product Master in order to be selectable.</inlineHelpText>
        <label>Configured This Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__confsess_div__r.rstk__sydiv_div__c + &apos;_&apos; + TEXT(rstk__confsess_sessionid__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT(rstk__confsess_sessionid__c) + &apos; &apos; +  rstk__confsess_soprod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Configuration Session</label>
    <listViews>
        <fullName>rstk__RS_Configuration_Sessions</fullName>
        <columns>rstk__confsess_status__c</columns>
        <columns>NAME</columns>
        <columns>rstk__confsess_div__c</columns>
        <columns>rstk__confsess_soprod__c</columns>
        <columns>rstk__confsess_sessionid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__confsess_socust__c</columns>
        <columns>rstk__confsess_price__c</columns>
        <columns>rstk__confsess_price1__c</columns>
        <columns>rstk__confsess_sohdr__c</columns>
        <columns>rstk__confsess_output__c</columns>
        <columns>rstk__confsess_dateout__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Configuration Sessions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_Discount_Method_1</fullName>
        <active>true</active>
        <description>Discount Percentage must be specified</description>
        <errorConditionFormula>ISPICKVAL( rstk__confsess_discmethod__c , &apos;Create Order Line for Discount&apos;) &amp;&amp;  rstk__confsess_discpct__c == 0</errorConditionFormula>
        <errorMessage>Discount Percentage must be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Discount_Method_2</fullName>
        <active>true</active>
        <description>Invalid Value for Configuration Product</description>
        <errorConditionFormula>ISPICKVAL( rstk__confsess_discmethod__c , &apos;Create Order Line for Discount&apos;) &amp;&amp;  ISBLANK(rstk__confsess_soprod__r.rstk__soprod_confdiscprod__c)</errorConditionFormula>
        <errorMessage>Invalid Value for Configuration Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Discount_Percentage</fullName>
        <active>true</active>
        <description>Discount Percentage must be between 0 and 100</description>
        <errorConditionFormula>rstk__confsess_discpct__c &lt; 0 || rstk__confsess_discpct__c &gt; 100</errorConditionFormula>
        <errorMessage>Discount Percentage must be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Icitem</fullName>
        <active>true</active>
        <description>Manufactured Item is required when Export Features to Serialized Item is checked</description>
        <errorConditionFormula>rstk__confsess_expicitemsrl__c = true &amp;&amp;  rstk__confsess_icitem__c = null</errorConditionFormula>
        <errorMessage>Manufactured Item is required when Export Features to Serialized Item is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Icitemsrl</fullName>
        <active>true</active>
        <description>Inventory By Serial Number is required when Export Features to Serialized Item is checked</description>
        <errorConditionFormula>rstk__confsess_expicitemsrl__c = true &amp;&amp;  rstk__confsess_icitemsrl__c = null</errorConditionFormula>
        <errorMessage>Inventory By Serial Number is required when Export Features to Serialized Item is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Previous_Confsess_Division</fullName>
        <active>true</active>
        <description>Previous Configuration Session Division must match Configuration Division</description>
        <errorConditionFormula>rstk__confsess_confsess__c != null &amp;&amp;  rstk__confsess_confsess__r.rstk__confsess_div__c !=  rstk__confsess_div__c</errorConditionFormula>
        <errorMessage>Previous Configuration Session Division must match Configuration Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Price</fullName>
        <active>true</active>
        <description>Price cannot be less than zero</description>
        <errorConditionFormula>rstk__confsess_price__c &lt; 0</errorConditionFormula>
        <errorMessage>Price cannot be less than zero</errorMessage>
    </validationRules>
</CustomObject>